tests/specs/interface_index_signature.txt
# mod.ts
export interface Interface {
  [index: number]: Interface;
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export interface Interface {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   [index: number]: Interface;
  |   ^


# output.txt
Defined in file:///mod.ts:1:1

interface Interface

  [index: number]: Interface


# output.json
[
  {
    "kind": "interface",
    "name": "Interface",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "interfaceDef": {
      "extends": [],
      "methods": [],
      "properties": [],
      "callSignatures": [],
      "indexSignatures": [
        {
          "readonly": false,
          "params": [
            {
              "kind": "identifier",
              "name": "index",
              "optional": false,
              "tsType": {
                "repr": "number",
                "kind": "keyword",
                "keyword": "number"
              }
            }
          ],
          "tsType": {
            "repr": "Interface",
            "kind": "typeRef",
            "typeRef": {
              "typeParams": null,
              "typeName": "Interface"
            }
          },
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 31
          }
        }
      ],
      "typeParams": []
    }
  }
]
